--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -65,7 +65,7 @@
         android:fontFamily="@font/m_light"
         android:gravity="center"
         android:text="Calendar Events"
-        android:textColor="@android:color/white"
+        android:textColor="@color/myWhite"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -76,7 +76,7 @@
         android:layout_marginTop="420dp"
         android:fontFamily="@font/m_light"
         android:text="Quickly add your events &amp; easy to switch beetween month &amp; week view"
-        android:textColor="@android:color/white"
+        android:textColor="@color/myWhite"
         android:textSize="18sp"
         android:textStyle="bold" />
 
