--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,6 @@
     <color name="hint_color">#aaa</color>
     <color name="ideaBackground">#0E182B</color>
     <color name="titleColor">#6986A3</color>
+    <color name="withoutColoredBackground">#757575</color>
+
 </resources>
