--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,12 +19,16 @@
     <color name="calendar_background">#122039</color>
     <color name="calendar_text">#FFF</color>
     <color name="plus_background">#122039</color>
-    <color name="navigation_background">#122039 </color>
+    <color name="navigation_background">#122039</color>
     <color name="settings_text_color">#FFF</color>
     <color name="timing_color">#211D44</color>
     <color name="hint_color">#aaa</color>
     <color name="ideaBackground">#0E182B</color>
     <color name="titleColor">#6986A3</color>
     <color name="withoutColoredBackground">#757575</color>
+    <color name="light_blue_50">#FFE1F5FE</color>
+    <color name="light_blue_200">#FF81D4FA</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
 
 </resources>
