--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <CheckBox
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/task_ch"
         android:fontFamily="@font/m_light"
         android:layout_margin="16dp"
         android:checked="false"
         android:textSize="20sp"
         style="@style/todoTextColor"
-        android:layout_width="match_parent"
+        app:layout_constraintEnd_toStartOf="@id/drag_view"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"/>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/drag_view"
+        android:layout_width="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="15dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_menu" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
