-Create values for MultiTheme

--- a/app/src/main/res/drawable-v24/rectangle_bg.xml
+++ b/app/src/main/res/drawable-v24/rectangle_bg.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle"   >
 
     <solid
-        android:color="@color/royalStart" >
+        android:color="?attr/toolbarColor" >
     </solid>
 
     <corners
