--- a/app/src/main/res/drawable/category_background.xml
+++ b/app/src/main/res/drawable/category_background.xml
@@ -3,7 +3,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item >
         <shape>
-            <stroke android:color="@color/myWhite"
+            <stroke android:color="?attr/textColor"
                 android:width="0.5dp"/>
         </shape>
     </item>
