--- a/app/src/main/res/drawable/ic_2span.xml
+++ b/app/src/main/res/drawable/ic_2span.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@color/icon_color">
+    android:tint="?attr/iconColor">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M3,3v18h18L21,3L3,3zM11,19L5,19v-6h6v6zM11,11L5,11L5,5h6v6zM19,19h-6v-6h6v6zM19,11h-6L13,5h6v6z"/>
