--- a/app/src/main/res/drawable/ic_person.xml
+++ b/app/src/main/res/drawable/ic_person.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="5dp"
     android:height="5dp"
-    android:tint="@color/icon_color"
+    android:tint="?attr/iconColor"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
