--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.main.CreateEventFragment">
 
     <androidx.appcompat.widget.Toolbar
-        android:background="@color/royalStart"
+        android:background="?attr/toolbarColor"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
@@ -67,8 +67,8 @@
         app:layout_constraintStart_toEndOf="@id/edit_title"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
+        android:visibility="invisible"
         android:layout_marginEnd="28dp"
-        android:background="@color/bluePersonal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addEvent_toolbar_view" />
 
