--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -19,10 +19,10 @@
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:background="@color/calendar_background"
+        android:background="@color/windowBackground"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:textColorSelected="@color/calendar_text" />
+        app:textColorSelected="?attr/textColor" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_quick_btn"
