--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,7 +10,7 @@
         android:id="@+id/settings_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/royalStart"
+        android:background="?attr/toolbarColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -56,7 +56,7 @@
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
         android:text="@string/planner"
-        android:textColor="@color/myWhite"
+        android:textColor="?attr/toolbarColor"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
         android:layout_height="45dp"
         android:layout_margin="20dp"
         android:layout_marginTop="20dp"
-        android:background="@color/royalStart"
+        android:background="?attr/toolbarColor"
         android:gravity="center_vertical"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/logo">
@@ -81,7 +81,7 @@
             android:drawableEnd="@drawable/ic_trash_forever_24"
             android:drawablePadding="15dp"
             android:text="@string/clearSetting"
-            android:textColor="@color/settings_text_color"
+            android:textColor="?attr/settings_text_color"
             android:textSize="15sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -92,7 +92,7 @@
         android:layout_height="45dp"
         android:layout_margin="20dp"
         android:layout_marginTop="20dp"
-        android:background="@color/royalStart"
+        android:background="?attr/toolbarColor"
         android:gravity="center_vertical"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/first_layout">
@@ -105,7 +105,7 @@
             android:drawableEnd="@drawable/ic_trash_forever_24"
             android:drawablePadding="15dp"
             android:text="@string/clear_minutes"
-            android:textColor="@color/settings_text_color"
+            android:textColor="?attr/textColor"
             android:textSize="15sp"
             android:textStyle="bold" />
 
@@ -118,7 +118,7 @@
         android:layout_height="45dp"
         android:layout_margin="20dp"
         android:layout_marginTop="20dp"
-        android:background="@color/royalStart"
+        android:background="?attr/toolbarColor"
         android:gravity="center_vertical"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/second_layout">
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:text="@string/change_theme"
-            android:textColor="@color/settings_text_color"
+            android:textColor="?attr/textColor"
             android:textSize="15sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -140,7 +140,7 @@
         android:layout_height="45dp"
         android:layout_margin="20dp"
         android:layout_marginTop="20dp"
-        android:background="@color/royalStart"
+        android:background="?attr/toolbarColor"
         android:gravity="center_vertical"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/third_layout">
@@ -152,7 +152,7 @@
             android:layout_marginStart="40dp"
             android:drawablePadding="15dp"
             android:text="@string/change_language"
-            android:textColor="@color/settings_text_color"
+            android:textColor="?attr/textColor"
             android:textSize="15sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -163,7 +163,7 @@
         android:layout_height="45dp"
         android:layout_margin="20dp"
         android:layout_marginTop="20dp"
-        android:background="@color/royalStart"
+        android:background="?attr/toolbarColor"
         android:gravity="center_vertical"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/four_layout">
@@ -175,7 +175,7 @@
             android:layout_marginStart="40dp"
             android:drawablePadding="15dp"
             android:text="@string/share_app"
-            android:textColor="@color/settings_text_color"
+            android:textColor="?attr/textColor"
             android:textSize="15sp"
             android:textStyle="bold" />
     </LinearLayout>
