--- a/app/src/main/res/layout/fragment_stopwatch.xml
+++ b/app/src/main/res/layout/fragment_stopwatch.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:text="@string/stopwatch"
-            android:textColor="@color/myWhite"
+            android:textColor="?attr/textColor"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="70dp"
             android:text="@string/what_are_doing"
-            android:textColor="@color/myWhite"
+            android:textColor="?attr/textColor"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/stopwatch_task_edit"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,11 +56,11 @@
             android:layout_width="320dp"
             android:layout_height="50dp"
             android:layout_marginTop="340dp"
-            android:background="@drawable/editstop_background"
+            android:background="@drawable/edit_text_background"
             android:inputType="textCapSentences"
             android:maxLength="21"
             android:textAlignment="center"
-            android:textColor="@color/myWhite"
+            android:textColor="?attr/textColor"
             android:textColorHint="@android:color/darker_gray"
             android:textSize="26sp"
             app:layout_constraintBottom_toTopOf="@id/stopwatch_task_apply"
@@ -120,7 +120,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="48dp"
             android:layout_marginEnd="8dp"
-            android:textColor="@color/myWhite"
+            android:textColor="?attr/textColor"
             android:textSize="62sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
