--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -29,7 +29,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:text="@string/timer"
-            android:textColor="@color/myWhite"
+            android:textColor="?attr/textColor"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,24 +40,23 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="70dp"
             android:text="@string/what_are_doing"
-            android:textColor="@color/myWhite"
+            android:textColor="?attr/textColor"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/timer_task_edit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/image_timerPhone" />
 
-
         <EditText
             android:id="@+id/timer_task_edit"
             android:layout_width="320dp"
             android:layout_height="50dp"
             android:layout_marginTop="340dp"
-            android:background="@drawable/editstop_background"
+            android:background="@drawable/edit_text_background"
             android:inputType="textCapSentences"
             android:maxLength="21"
             android:textAlignment="center"
-            android:textColor="@color/myWhite"
+            android:textColor="?attr/textColor"
             android:textColorHint="@android:color/darker_gray"
             android:textSize="26sp"
             app:layout_constraintBottom_toTopOf="@id/timer_task_apply"
@@ -117,7 +116,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:text="@string/time"
-            android:textColor="@color/myWhite"
+            android:textColor="?attr/textColor"
             android:textSize="35sp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -172,14 +171,13 @@
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:layout_marginTop="50dp"
-            android:background="@drawable/editstop_background"
+            android:background="@drawable/edit_text_background"
             android:hint="@string/minutes_amount"
             android:inputType="number"
             android:maxLength="3"
-            android:shadowColor="@color/withoutColoredBackground"
             android:textAlignment="center"
-            android:textColor="@color/myWhite"
-            android:textColorHint="@color/myWhite"
+            android:textColor="?attr/textColor"
+            android:textColorHint="?attr/textColor"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
