--- a/app/src/main/res/layout/notification_expanded_stopwatch.xml
+++ b/app/src/main/res/layout/notification_expanded_stopwatch.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="112dp"
-    android:background="@color/royalStart"
+    android:background="?attr/toolbarColor"
     android:id="@+id/notification_const"
     android:orientation="vertical">
 
