--- a/app/src/main/res/layout/timing_item.xml
+++ b/app/src/main/res/layout/timing_item.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
         android:text="Прочитать книжку"
-        android:textColor="@color/myWhite"
+        android:textColor="?attr/textColor"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +22,7 @@
         android:layout_margin="10dp"
         android:layout_marginTop="50dp"
         android:text="20 минут"
-        android:textColor="@color/myWhite"
+        android:textColor="?attr/textColor"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_marginEnd="50dp"
         app:layout_constraintTop_toBottomOf="@id/timer_task_title"
         android:text="1 августа"
-        android:textColor="@color/myWhite"
+        android:textColor="?attr/textColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
