--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,6 @@
 <resources>
 
     <style name="ThemeOverlay.Planner.AppWidgetContainer" parent="">
-        <item name="appWidgetBackgroundColor">@color/royalStart</item>
-        <item name="appWidgetTextColor">@color/light_blue_50</item>
+        <item name="appWidgetBackgroundColor">?attr/toolbarColor</item>
     </style>
 </resources>
