--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.CategoryFragment">
+    tools:context=".ui.tasks.CategoryFragment">
 
     <ProgressBar
         android:id="@+id/tasks_progress_bar"
