--- a/app/src/main/res/layout/fragment_create_tasks.xml
+++ b/app/src/main/res/layout/fragment_create_tasks.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.CreateTasksFragment">
+    tools:context=".ui.tasks.CreateTasksFragment">
 
     <Toolbar
         android:id="@+id/cr_category_toolbar"
