--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.main.timing.TimerFragment">
+    tools:context=".ui.timing.TimerFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/image_const"
